ALEPH-19 Suspend/resume now working